# abinit_study

./: CMakeLists.txt  README.md  analytic_gradient.cpp  analytic_gradient.hpp  basis_context.hpp  calculation_config.hpp  cisd.hpp  core_molecule.hpp  dft_grid.cpp  dft_grid.hpp  dft_lda.cpp  dft_lda.hpp  dft_xc_matrix.cpp  dft_xc_matrix.hpp  dispersion.cpp  dispersion.hpp  fci.cpp  fci.hpp  geometry_optimizer.cpp  geometry_optimizer.hpp  lebedev_grid.hpp  lebedev_grid_high_order.hpp  linalg_utils.hpp  main.cpp  mini_rhf_libint_xyz_diis_opt_mp2_fci.cpp  miniqc.hpp  mp2.cpp  mp2_v3_direct_t1.hpp  one_body_integrals.hpp  periodic_table.hpp  rhf.hpp  rks_xc.cpp  rks_xc.hpp  scf_diis.hpp  two_body_fock.hpp  water_1.xyz  xc_evaluator.cpp  xc_evaluator.hpp  xc_functional.cpp  xc_functional.hpp  (+1 more)
docs/: build_and_regression.md  dft_grid_validation.md  dft_reference_tests.md  dft_xc_matrix_builder.md  dispersion_corrections.md  dispersion_distance_scan.md  hybrid_jk_builders.md  mgga_tau_vtau.md  rks_config_driver.md  rks_xc_driver.md  xc_evaluator.md  xc_functional_design.md
examples/: water_rhf_opt.in
tests/: compare_dft_with_pyscf.py  h2_b3lyp_rks_sto3g.in  h2_m062x_rks_sto3g.in  h2_opt_analytic_sto3g.in  h2_opt_numerical_sto3g.in  h2_pbe0_rks_sto3g.in  h2_pbe_d2_rks_sto3g.in  h2_pbe_rks_sto3g.in  h2_rhf_sto3g.in  scan_dft_grid_convergence.py  test_dft_xc_matrix.cpp  test_dispersion_d2.cpp  test_jk_builders.cpp  test_lebedev_grid.cpp  test_rks_xc_driver.cpp  test_xc_evaluator.cpp  test_xc_functional.cpp
tests/data/: h2_1p4_bohr.xyz
tools/: scan_dispersion_distance.py
